
  FEATURES:

   * New option to use custom template-based formats in  ``bzr version-info``.
     (Lukáš Lalinský)

   * New smart method, ``Repository.stream_revisions_chunked``, for fetching
     revision data that streams revision data via a chunked encoding.  This
     avoids buffering large amounts of revision data on the server and on the
     client.  (Andrew Bennetts, #178353)

   * diff '--using' allows an external diff tool to be used for files.
     (Aaron Bentley)

   * New "lca" merge-type for fast everyday merging that also supports
     criss-cross merges.  (Aaron Bentley)

  IMPROVEMENTS:

   * ``annotate`` now doesn't require a working tree. (Lukáš Lalinský,
     #90049)

   * ``branch`` and ``checkout`` can now use files from a working tree to
     to speed up the process.  For checkout, this requires the new
     --files-from flag.  (Aaron Bentley)

   * ``bzr diff`` now sorts files in alphabetical order.  (Aaron Bentley)

   * ``bzr diff`` now works on branches without working trees. Tree-less
     branches can also be compared to each other and to working trees using
     the new diff options ``--old`` and ``--new``. Diffing between branches,
     with or without trees, now supports specific file filtering as well.
     (Ian Clatworthy, #6700)

   * ``bzr pack`` now orders revision texts in topological order, with newest
     at the start of the file, promoting linear reads for ``bzr log`` and the
     like. This partially fixes #154129. (Robert Collins)

   * Fetching between different repository formats with compatible models now
     takes advantage of the smart method to stream revisions.  (Andrew Bennetts)

   * Merge directives now fetch prerequisites from the target branch if
     needed.  (Aaron Bentley)

   * pycurl now handles digest authentication.
     (Vincent Ladeuil)

   * ``reconfigure`` can now convert from repositories.  (Aaron Bentley)

   * ``-l`` is now a short form for ``--limit`` in ``log``.  (Matt Nordhoff)
