@@ -829,11 +829,13 @@ class TestSmartServerRepositoryStreamRevisionsChunked(tests.TestCaseWithTranspor
         tree.add('')
         rev_id1_utf8 = u'\xc8'.encode('utf-8')
         rev_id2_utf8 = u'\xc9'.encode('utf-8')
-        r1 = tree.commit('1st commit', rev_id=rev_id1_utf8)
-        r1 = tree.commit('2nd commit', rev_id=rev_id2_utf8)
+        tree.commit('1st commit', rev_id=rev_id1_utf8)
+        tree.commit('2nd commit', rev_id=rev_id2_utf8)
         tree.unlock()
 
-        response = request.execute(backing.local_abspath(''), rev_id2_utf8)
+        response = request.execute(backing.local_abspath(''))
+        self.assertEqual(None, response)
+        response = request.do_body("%s\n%s\n1" % (rev_id2_utf8, rev_id1_utf8))
         self.assertEqual(('ok',), response.args)
         from cStringIO import StringIO
         parser = pack.ContainerPushParser()
@@ -853,7 +855,10 @@ class TestSmartServerRepositoryStreamRevisionsChunked(tests.TestCaseWithTranspor
             backing)
         repo = self.make_repository('.')
         rev_id1_utf8 = u'\xc8'.encode('utf-8')
-        response = request.execute(backing.local_abspath(''), rev_id1_utf8)
+        response = request.execute(backing.local_abspath(''))
+        self.assertEqual(None, response)
+        response = request.do_body("%s\n\n1" % (rev_id1_utf8,))
+        self.assertEqual(('ok',), response.args)
         # There's no error initially.
         self.assertTrue(response.is_successful())
         self.assertEqual(('ok',), response.args)
@@ -864,6 +869,19 @@ class TestSmartServerRepositoryStreamRevisionsChunked(tests.TestCaseWithTranspor
         self.assertEqual(
             last_chunk,
             FailedSmartServerResponse(('NoSuchRevision', rev_id1_utf8)))
+
+    def test_no_such_revision_error(self):
+        backing = self.get_transport()
+        request = smart.repository.SmartServerRepositoryStreamRevisionsChunked(
+            backing)
+        repo = self.make_repository('.')
+        rev_id1_utf8 = u'\xc8'.encode('utf-8')
+        response = request.execute(backing.local_abspath(''))
+        self.assertEqual(None, response)
+        response = request.do_body("%s\n\n1" % (rev_id1_utf8,))
+        self.assertEqual(
+            FailedSmartServerResponse(('NoSuchRevision', )),
+            response)
 
 
 class TestSmartServerIsReadonly(tests.TestCaseWithTransport):
@@ -934,10 +952,6 @@ class TestHandlers(tests.TestCase):
         self.assertEqual(
             smart.request.request_handlers.get('Repository.lock_write'),
             smart.repository.SmartServerRepositoryLockWrite)
-        self.assertEqual(
-            smart.request.request_handlers.get(
-                'Repository.chunked_stream_knit_data_for_revisions'),
-            smart.repository.SmartServerRepositoryStreamKnitDataForRevisions)
         self.assertEqual(
             smart.request.request_handlers.get('Repository.tarball'),
             smart.repository.SmartServerRepositoryTarball)
